bug with add button not showing as well as removing boarder around every tab

--- a/lab03/style/cart_style.css
+++ b/lab03/style/cart_style.css
@@ -3,6 +3,9 @@
   }
   body {
     font-size: 14px;
+    min-height: 400px;
+    margin-bottom: 100px;
+    clear: both;
   }
 
   .page-container{
