--- a/lab03/style/clients_style.css
+++ b/lab03/style/clients_style.css
@@ -1,6 +1,4 @@
-* {
-  box-sizing: border-box;
-}
+
 body {
   font-size: 14px;
 }
@@ -30,7 +28,6 @@ body {
 .tabcontent {
   display: none;
   padding: 6px 12px;
-  border: 1px solid #ccc;
   border-top: none;
 }
 
